turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:18: error: value c is not a member of object java.awt.Color
  setCouleurBrosse(Color.c);baisseBrosse();leveBrosse()
                         ^